Fix date overlap

--- a/themes/hugo-blog-awesome/assets/sass/_dark.scss
+++ b/themes/hugo-blog-awesome/assets/sass/_dark.scss
@@ -184,6 +184,7 @@
     }
 
     .post-item-title {
+      padding-right: 12px;
       a {
         color: $dark-text-base-color;
 
